# cgc_distributed_moyu

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md  a.out  demo.cpp  run_gen_data.sh  run_test.sh
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark.cpp
distributed_moyu/: gcn.cpp  makefile
impls/: CMakeLists.txt
impls/avxop/: CMakeLists.txt  exp.cpp
impls/openblas/: CMakeLists.txt  openblas_impl.cpp
impls/origin/: CMakeLists.txt  origin_impl.cpp
include/impls/avxop/: avxop_impl.h
include/impls/openblas/: openblas_impl.h
include/impls/origin/: origin_impl.h
include/utils/: utils.h
utils/: CMakeLists.txt  gen_data.cpp  standard  utils.cpp  utils.h
your_team_name/: gcn.cpp  makefile
